change character encoding

--- a/c/cyrankiewicz-jozef/index.html
+++ b/c/cyrankiewicz-jozef/index.html
@@ -41,7 +41,7 @@
 			</p>
 			<blockquote>
 				<p>
-					The gassing never ends: 3,000 prisoners from <a href="/t/theresienstadt/index.html">Theresienstadt</a>; 2,500 from Auschwitz I, II, and III; 6,000 Jewish women from Weimar; 500 male Jews from the ghetto in &#321;&oacute;d&#378;; 400 prisoners from <a href="/b/buchenwald/index.html">Buchenwald</a>. Selections from among the sick and the unhealthy for gassing continue unabated.
+					The gassing never ends: 3,000 prisoners from <a href="/t/theresienstadt/index.html">Theresienstadt</a>; 2,500 from Auschwitz I, II, and III; 6,000 Jewish women from Weimar; 500 male Jews from the ghetto in &Lstrok;&oacute;d&zacute;; 400 prisoners from <a href="/b/buchenwald/index.html">Buchenwald</a>. Selections from among the sick and the unhealthy for gassing continue unabated.
 				</p>
 			</blockquote>
 			<p>
