--- a/cross-references/convergence-of-evidence.html
+++ b/cross-references/convergence-of-evidence.html
@@ -36,7 +36,7 @@
 				<li><a href="/k/kon-stanislaw/index.html">Kon, Stanis&#322;aw</a></li>
 				<li><a href="/l/lequeux-maurice/index.html">Lequeux, Maurice</a></li>
 				<li><a href="/l/lichtenstein-mordecai/index.html">Lichtenstein, Mordecai</a></li>
-				<li><a href="/l/lukaszkiewicz-zdzislaw/index.html">&#321;ukaszkiewicz, Zdzis&#322;aw</a></li>
+				<li><a href="/l/lukaszkiewicz-zdzislaw/index.html">&Lstrok;ukaszkiewicz, Zdzis&#322;aw</a></li>
 				<li><a href="/l/lumberjacks/index.html">Lumberjacks</a></li>
 				<li><a href="/m/morgen-konrad/index.html">Morgen, Konrad</a></li>
 				<li><a href="/o/obrycki-narcyz-tadeusz/index.html">Obrycki, Narcyz T.</a></li>
