--- a/cross-references/instruments.html
+++ b/cross-references/instruments.html
@@ -62,7 +62,7 @@
 				<li><a href="/k/klooga/index.html">Klooga</a></li>
 				<li><a href="/k/kosow-podlaski/index.html">Kos&oacute;w Podlaski</a></li>
 				<li><a href="/l/lethal-injections/index.html">Lethal Injections</a></li>
-				<li><a href="/l/lodz-ghetto/index.html">&#321;&oacute;d&#378; Ghetto</a></li>
+				<li><a href="/l/lodz-ghetto/index.html">&Lstrok;&oacute;d&zacute; Ghetto</a></li>
 				<li><a href="/m/majdanek/index.html">Majdanek</a></li>
 				<li><a href="/m/maly-trostenets/index.html">Maly Trostenets</a></li>
 				<li><a href="/m/mauthausen/index.html">Mauthausen</a></li>
