--- a/cross-references/locations.html
+++ b/cross-references/locations.html
@@ -166,7 +166,7 @@
 			</h3>
 			<ul class="columns">
 				<li><a href="/g/ghettos/index.html">Ghettos</a> </li>
-				<li><a href="/l/lodz-ghetto/index.html">&#321;&oacute;d&#378; Ghetto</a> </li>
+				<li><a href="/l/lodz-ghetto/index.html">&Lstrok;&oacute;d&zacute; Ghetto</a> </li>
 				<li><a href="/t/theresienstadt/index.html">Theresienstadt</a> </li>
 				<li><a href="/w/warsaw-ghetto/index.html">Warsaw Ghetto</a> </li>
 			</ul>
