--- a/cross-references/persons.html
+++ b/cross-references/persons.html
@@ -214,7 +214,7 @@
 				<li><a href="/l/lichtmann-icek/index.html">Lichtmann, Icek</a></li>
 				<li><a href="/l/liebehenschel-arthur/index.html">Liebehenschel, Arthur</a></li>
 				<li><a href="/l/limousin-henri/index.html">Limousin, Henri</a></li>
-				<li><a href="/l/lukaszkiewicz-zdzislaw/index.html">&#321;ukaszkiewicz, Zdzis&#322;aw</a></li>
+				<li><a href="/l/lukaszkiewicz-zdzislaw/index.html">&Lstrok;ukaszkiewicz, Zdzis&#322;aw</a></li>
 				<li><a href="/m/muller-filip/index.html">M&uuml;ller, Filip</a></li>
 				<li><a href="/m/munch-hans/index.html">M&uuml;nch, Hans</a></li>
 				<li><a href="/m/mandelbaum-henryk/index.html">Mandelbaum, Henryk</a></li>
@@ -415,7 +415,7 @@
 				<li><a href="/b/bednarz-wladyslaw/index.html">Bednarz, W&#322;adys&#322;aw</a> </li>
 				<li><a href="/b/bock-ludwig/index.html">Bock, Ludwig</a> </li>
 				<li><a href="/e/eitan-dov/index.html">Eitan, Dov</a> </li>
-				<li><a href="/l/lukaszkiewicz-zdzislaw/index.html">&#321;ukaszkiewicz, Zdzis&#322;aw</a> </li>
+				<li><a href="/l/lukaszkiewicz-zdzislaw/index.html">&Lstrok;ukaszkiewicz, Zdzis&#322;aw</a> </li>
 				<li><a href="/p/pinter-stephen-f/index.html">Pinter, Stephen F.</a> </li>
 				<li><a href="/s/sehn-jan/index.html">Sehn, Jan</a> </li>
 				<li><a href="/s/sheftel-yoram/index.html">Sheftel, Yoram</a> </li>
