--- a/change-log/index.html
+++ b/change-log/index.html
@@ -150,7 +150,7 @@
 				<li>The entry on <a href="/s/self-immolating-bodies/index.html">Self-Immolating Bodies</a> received a reference to <a href="/bibliography/index.html#Yerman">Yerm&aacute;n <i>et al.</i> 2018</a>.</li>
 				<li>Entry on <a href="/s/semlin/index.html">Semlin</a>: The camp&rsquo;s location is now briefly described.</li>
 				<li>Entry on <a href="/s/shrunken-heads-myth-of/index.html">Shrunken Heads</a>: the quote on <q>pathological phase of the Nazi culture</q> was corrected (the words <q>phase of the</q> were missing).</li>
-				<li>Entry on <a href="/s/sobibor/index.html">Sobib&oacute;r</a>: The camp&rsquo;s location is now briefly described. In addition, a major correction on &#321;ukaszkiewicz&rsquo;s mendacious method of <q>writing</q> history became necessary as shown below. (The Belzec paper published before &#321;ukaszkiewicz&rsquo;s article on Sobib&oacute;r in the same issue of the same periodical was authored by Eugeniusz Szrojt, who was more likely influenced by &#321;ukaszkiewicz&rsquo;s Treblinka article of the previous year than &#321;ukaszkiewicz having been influenced by Szrojt):<br />
+				<li>Entry on <a href="/s/sobibor/index.html">Sobib&oacute;r</a>: The camp&rsquo;s location is now briefly described. In addition, a major correction on &Lstrok;ukaszkiewicz&rsquo;s mendacious method of <q>writing</q> history became necessary as shown below. (The Belzec paper published before &Lstrok;ukaszkiewicz&rsquo;s article on Sobib&oacute;r in the same issue of the same periodical was authored by Eugeniusz Szrojt, who was more likely influenced by &Lstrok;ukaszkiewicz&rsquo;s Treblinka article of the previous year than &Lstrok;ukaszkiewicz having been influenced by Szrojt):<br />
 				<table class="table">
 					<thead>
 						<tr>
@@ -160,8 +160,8 @@
 					</thead>
 					<tbody>
 						<tr>
-							<td>&#321;ukaszkiewicz simply copied the claims for the Belzec Camp, which he had described in a chapter just prior to writing about Sobib&oacute;r.</td>
-							<td>&#321;ukaszkiewicz simply copied the narrative he had developed for the Treblinka Camp in an article he had published the previous year (see the entry on that camp).</td>
+							<td>&Lstrok;ukaszkiewicz simply copied the claims for the Belzec Camp, which he had described in a chapter just prior to writing about Sobib&oacute;r.</td>
+							<td>&Lstrok;ukaszkiewicz simply copied the narrative he had developed for the Treblinka Camp in an article he had published the previous year (see the entry on that camp).</td>
 						</tr>
 					</tbody>
 				</table>
@@ -173,7 +173,7 @@
 				<li>Entry on Torture: as with the entry on <a href="/d/dachau-trials/index.html">Dachau Trials</a>: Edward L. van Roden was demoted to a mere Pennsylvania judge.</li>
 				<li>Entry on <a href="/t/towels-soap-toothbrushes-inside-gas-chambers/index.html">Towels, Soap</a> etc: The last sentence on convergence in a lie was deleted, as it repeated in other words what is said already in the last sentence before the final list.</li>
 				<li>Entry on <a href="/t/transit-camps/index.html">Transit Camps</a>: three more sources are given, the same as for the entry on Resettlement; see above.</li>
-				<li>Entry on <a href="/t/treblinka/index.html">Treblinka</a>: The camp&rsquo;s location is now briefly described. In the summary table of witness claims on Treblinka, the first two entries for Abe Kon in the last column were changed from <q>400 persons/m&sup2;</q> to <q>400 persons per chamber</q>. Apologies for the wrong unit given earlier (m&sup2;). As with the entry on Sobib&oacute;r, a correction on &#321;ukaszkiewicz&rsquo;s mendacious method of <q>writing</q> history became necessary as shown below. (Eugeniusz Szrojt&rsquo;s Belzec paper was published <i>after</i> &#321;ukaszkiewicz&rsquo;s article on Treblinka):<br />
+				<li>Entry on <a href="/t/treblinka/index.html">Treblinka</a>: The camp&rsquo;s location is now briefly described. In the summary table of witness claims on Treblinka, the first two entries for Abe Kon in the last column were changed from <q>400 persons/m&sup2;</q> to <q>400 persons per chamber</q>. Apologies for the wrong unit given earlier (m&sup2;). As with the entry on Sobib&oacute;r, a correction on &Lstrok;ukaszkiewicz&rsquo;s mendacious method of <q>writing</q> history became necessary as shown below. (Eugeniusz Szrojt&rsquo;s Belzec paper was published <i>after</i> &Lstrok;ukaszkiewicz&rsquo;s article on Treblinka):<br />
 				<table class="table">
 					<thead>
 						<tr>
@@ -183,8 +183,8 @@
 					</thead>
 					<tbody>
 						<tr>
-							<td>&#321;ukaszkiewicz mainly took Wiernik&rsquo;s later version of the tale, which aligned nicely with the version he had already cobbled together for the Belzec Camp, and dropped all the rest.</td>
-							<td>&#321;ukaszkiewicz basically took Wiernik&rsquo;s later version of the tale, and dropped all the rest.</td>
+							<td>&Lstrok;ukaszkiewicz mainly took Wiernik&rsquo;s later version of the tale, which aligned nicely with the version he had already cobbled together for the Belzec Camp, and dropped all the rest.</td>
+							<td>&Lstrok;ukaszkiewicz basically took Wiernik&rsquo;s later version of the tale, and dropped all the rest.</td>
 						</tr>
 					</tbody>
 				</table>
@@ -266,7 +266,7 @@
 				October 11, 2024
 			</h3>
 			<ul>
-				<li>Corrected typos and bad grammar, improved expressions and added a few more cross references in a wide range of entries (Berlyant, Davydov, Doliner, International Military Tribunal, International Tracing Service, Iron Blue, Israel, Bruno, Italy, J&auml;ger Report, Jankowski, Janowska Camp, Jasenovac, Kaper, Karasik, Karski, Kharkov, Klooga, Koch, Ilse, Koch, Karl, Korherr, Korn, Kramer, Kranz, Krasnodar, Kraus, Kremer, Kuklia, Kula, Kulka, Langfus, Lengyel, Lequeux, Lettich, Lewental, Lewi&#324;ska, Lichtenstein, Liebehenschel, Litwinska, &#321;&oacute;d&#378;, London Cage, &#321;ukaszkiewicz).</li>
+				<li>Corrected typos and bad grammar, improved expressions and added a few more cross references in a wide range of entries (Berlyant, Davydov, Doliner, International Military Tribunal, International Tracing Service, Iron Blue, Israel, Bruno, Italy, J&auml;ger Report, Jankowski, Janowska Camp, Jasenovac, Kaper, Karasik, Karski, Kharkov, Klooga, Koch, Ilse, Koch, Karl, Korherr, Korn, Kramer, Kranz, Krasnodar, Kraus, Kremer, Kuklia, Kula, Kulka, Langfus, Lengyel, Lequeux, Lettich, Lewental, Lewi&#324;ska, Lichtenstein, Liebehenschel, Litwinska, &Lstrok;&oacute;d&zacute;, London Cage, &Lstrok;ukaszkiewicz).</li>
 				<li><a href="/j/jasenovac/index.html">Jasenovac</a> and <a href="/k/klooga/index.html">Klooga</a> camps: added a phrase each on location of these camps.</li>
 				<li><a href="/k/kraus-ota/index.html">Kraus, Ota</a>: expanded the last quote from <q>about 400,000 people who were political prisoners.</q> To <q>about 400,000 people who were political prisoners, so that the total number of deaths in Brzezinka [Birkenau] amounts to 4,000,000.</q></li>
 				<li>Added an item to the entry <a href="/a/absurd-claims/index.html">Absurd Claims</a> on biogas usage for homicides.</li>
@@ -365,7 +365,7 @@
 								However, during the final months of the war, Germany&rsquo;s infrastructure had mostly collapsed under the relentless carpet-bombing campaign of the Anglo-American bomber fleets.</td>
 							<td>
 							<p>
-								Initially, this only affected the eastern camps threatened by the Red Army. Lublin (Majdanek) and Auschwitz were among the first camps to be subjected to this order. Some ghettos whose production facilities were classified as essential to the war effort were also evacuated. In anticipation of the Red Army&rsquo;s advance, many inmates had been transferred already earlier to camps further west. The aim of these transfers was to preserve the inmates&rsquo; labor for the German manufacturing industry. Accordingly, manufacturing plants were also relocated wherever possible. This happened, for example, in August 1944 with the inmates and the factories of the &#321;&oacute;d&#378; Ghetto. (See this entry.)
+								Initially, this only affected the eastern camps threatened by the Red Army. Lublin (Majdanek) and Auschwitz were among the first camps to be subjected to this order. Some ghettos whose production facilities were classified as essential to the war effort were also evacuated. In anticipation of the Red Army&rsquo;s advance, many inmates had been transferred already earlier to camps further west. The aim of these transfers was to preserve the inmates&rsquo; labor for the German manufacturing industry. Accordingly, manufacturing plants were also relocated wherever possible. This happened, for example, in August 1944 with the inmates and the factories of the &Lstrok;&oacute;d&zacute; Ghetto. (See this entry.)
 							</p>
 							<p>
 								Such evacuation orders became problematic in the final months of the war, when Germany&rsquo;s infrastructure had mostly collapsed under the relentless carpet-bombing campaign of the Anglo-American bomber fleets.</td>
