--- a/g/gertner-szaja/index.html
+++ b/g/gertner-szaja/index.html
@@ -20,7 +20,7 @@
 			<audio controls src="/_assets/audio/GertnerSzaja.mp3">
 			</audio>
 			<p>
-				Szaja Gertner was a Polish Jew who was deported to <a href="/a/auschwitz/index.html">Auschwitz</a> from &#321;&oacute;d&#378;, Poland, on an unknown date. His testimony was published in a Polish book in 1945. Right after his arrival, he claims to have been assigned to the so-called <a href="/s/sonderkommando/index.html"><i>Sonderkommando</i></a>. There he claims to have witnessed things that are absurd or demonstrably impossible:
+				Szaja Gertner was a Polish Jew who was deported to <a href="/a/auschwitz/index.html">Auschwitz</a> from &Lstrok;&oacute;d&zacute;, Poland, on an unknown date. His testimony was published in a Polish book in 1945. Right after his arrival, he claims to have been assigned to the so-called <a href="/s/sonderkommando/index.html"><i>Sonderkommando</i></a>. There he claims to have witnessed things that are absurd or demonstrably impossible:
 			</p>
 			<ul>
 				<li>Each person received a receipt for the clothing they left behind when undressing to be gassed, which is a unique and nonsensical claim.</li>
