--- a/l/lukaszkiewicz-zdzislaw/index.html
+++ b/l/lukaszkiewicz-zdzislaw/index.html
@@ -5,7 +5,7 @@
 <meta charset="UTF-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
 <link rel="stylesheet" href="/_assets/css/encyclopedia.css" media="screen"><link href="https://encyclopedia.historiography-project.com/l/lukaszkiewicz-zdzislaw/index.html" rel="canonical">
 <!-- end bbinclude -->
-	<title>&#321;ukaszkiewicz, Zdzis&#322;aw | Holocaust Encyclopedia</title>
+	<title>&Lstrok;ukaszkiewicz, Zdzis&#322;aw | Holocaust Encyclopedia</title>
 </head>
 <body>
 <!-- #bbinclude "page-header-small.incl" -->
@@ -15,21 +15,21 @@
 <nav id="thumbIndex"><p class="text-center well"><a class="btn btn-default" href="/a/index.html" id="a">A</a> <a class="btn btn-default" href="/b/index.html"id="b">B</a> <a class="btn btn-default" href="/c/index.html"id="c">C</a> <a class="btn btn-default" href="/d/index.html" id="d">D</a> <a class="btn btn-default" href="/e/index.html" id="e">E</a> <a class="btn btn-default" href="/f/index.html" id="f">F</a> <a class="btn btn-default" href="/g/index.html" id="g">G</a> <a class="btn btn-default" href="/h/index.html" id="h">H</a> <a class="btn btn-default" href="/i/index.html" id="i">I</a> <a class="btn btn-default" href="/j/index.html" id="j">J</a> <a class="btn btn-default" href="/k/index.html" id="k">K</a> <a class="btn btn-default" href="/l/index.html" id="l">L</a> <a class="btn btn-default" href="/m/index.html" id="m">M</a><br><a class="btn btn-default" href="/n/index.html" id="n">N</a> <a class="btn btn-default" href="/o/index.html" id="o">O</a> <a class="btn btn-default" href="/p/index.html" id="p">P</a> <a class="btn btn-default" href="/q/index.html" id="q">Q</a> <a class="btn btn-default" href="/r/index.html" id="r">R</a> <a class="btn btn-default" href="/s/index.html" id="s">S</a> <a class="btn btn-default" href="/t/index.html" id="t">T</a> <a class="btn btn-default" href="/u/index.html" id="u">U</a> <a class="btn btn-default" href="/v/index.html" id="v">V</a> <a class="btn btn-default" href="/w/index.html" id="w">W</a> <a class="btn btn-default" href="/y/index.html" id="y">Y</a> <a class="btn btn-default" href="/z/index.html" id="z">Z</a> <a class="btn btn-default" href="/list-of-entries/index.html" id="entries"><span class="glyphicon glyphicon-list"></span></a></p></nav><script src="/_assets/js/thumbIndex-min.js"></script>
 <!-- end bbinclude -->
 			<h2 data-pagefind-weight="7">
-				&#321;ukaszkiewicz, Zdzis&#322;aw
+				&Lstrok;ukaszkiewicz, Zdzis&#322;aw
 			</h2>
 			<audio controls src="/_assets/audio/LukaszkiewiczZdzislaw.mp3">
 			</audio>
 			<p>
-				Zdzis&#322;aw &#321;ukaszkiewicz was a Polish judge who, at the end of the Second World War, became a member of the Stalinist Main Commission for the Investigation of German Crimes in Poland. As such, he issued reports and wrote articles on several of the German wartime camps in Poland, among them the <a href="/m/majdanek/index.html">Majdanek Camp</a> (<a href="/bibliography/index.html#Graf_Mattogno2012">Graf/Mattogno 2012</a>, pp. 80-89), the <a href="/s/stutthof/index.html">Stutthof Camp</a> (<a href="/bibliography/index.html#Graf_Mattogno2016">Graf/Mattogno 2016</a>, pp. 39f.), the <a href="/t/treblinka/index.html">Treblinka Camp</a> (<a href="/bibliography/index.html#Mattogno_Graf">Mattogno/Graf 2023</a>, esp. pp. 82-109) and the <a href="/s/sobibor/index.html">Sobib&oacute;r Camp</a> (<a href="/bibliography/index.html#Graf_Kues">Graf/Kues/Mattogno 2020</a>, pp. 25f., 150).
+				Zdzis&#322;aw &Lstrok;ukaszkiewicz was a Polish judge who, at the end of the Second World War, became a member of the Stalinist Main Commission for the Investigation of German Crimes in Poland. As such, he issued reports and wrote articles on several of the German wartime camps in Poland, among them the <a href="/m/majdanek/index.html">Majdanek Camp</a> (<a href="/bibliography/index.html#Graf_Mattogno2012">Graf/Mattogno 2012</a>, pp. 80-89), the <a href="/s/stutthof/index.html">Stutthof Camp</a> (<a href="/bibliography/index.html#Graf_Mattogno2016">Graf/Mattogno 2016</a>, pp. 39f.), the <a href="/t/treblinka/index.html">Treblinka Camp</a> (<a href="/bibliography/index.html#Mattogno_Graf">Mattogno/Graf 2023</a>, esp. pp. 82-109) and the <a href="/s/sobibor/index.html">Sobib&oacute;r Camp</a> (<a href="/bibliography/index.html#Graf_Kues">Graf/Kues/Mattogno 2020</a>, pp. 25f., 150).
 			</p>
 			<p>
-				&#321;ukaszkiewicz was probably the most influential individual in that commission. When it comes to the orthodox narrative of extermination claims in German camps on Polish and East-German territory, his writings had one of the greatest impacts. Within the framework of the commission he was working for, he interviewed many witnesses. Out of the often contradictory and preposterous claims, he artificially created a superficially consistent narrative by cherry-picking from each testimony what fit into the image he considered most convincing.
+				&Lstrok;ukaszkiewicz was probably the most influential individual in that commission. When it comes to the orthodox narrative of extermination claims in German camps on Polish and East-German territory, his writings had one of the greatest impacts. Within the framework of the commission he was working for, he interviewed many witnesses. Out of the often contradictory and preposterous claims, he artificially created a superficially consistent narrative by cherry-picking from each testimony what fit into the image he considered most convincing.
 			</p>
 			<p>
 				In the case of <a href="/s/sobibor/index.html">Sobib&oacute;r Camp</a>, he in fact discarded all <a href="/w/witnesses/index.html#Sobibor">witness testimony</a>, and created a completely new narrative from scratch. He also completely sanitized the testimonial anarchy reigning among early <a href="/t/treblinka/index.html">Treblinka</a> <a href="/w/witnesses/index.html#Treblinka">witnesses</a>, by deciding to accept one witness&rsquo;s account (that of <a href="/w/wiernik-jankiel-yankiel/index.html">Jankiel Wiernik</a>) and to discard almost all the rest.
 			</p>
 			<p>
-				Along the way, &#321;ukaszkiewicz also trimmed down the outrageously inflated death-toll claims of the immediate postwar era to a level that seemed credible, at least to the uninitiated observer. Most of these figures, as well as the murder methods, have been accepted largely by mainstream historians to this day, with the exception of the <a href="/m/majdanek/index.html">Majdanek Camp</a>, where further radical downward revisions have been made since. (See the table.)
+				Along the way, &Lstrok;ukaszkiewicz also trimmed down the outrageously inflated death-toll claims of the immediate postwar era to a level that seemed credible, at least to the uninitiated observer. Most of these figures, as well as the murder methods, have been accepted largely by mainstream historians to this day, with the exception of the <a href="/m/majdanek/index.html">Majdanek Camp</a>, where further radical downward revisions have been made since. (See the table.)
 			</p>
 			<table class="table">
 				<thead>
@@ -37,7 +37,7 @@
 						<th>Camp</th>
 						<th>Peak Claimed<br />
 						Death Toll</th>
-						<th>&#321;ukaszkiewicz&rsquo;s<br>
+						<th>&Lstrok;ukaszkiewicz&rsquo;s<br>
 						Death Toll</th>
 						<th>Today&rsquo;s Orthodox<br>
 						Death Toll</th>
