update Jewish Demography

--- a/d/demography-jewish/index.html
+++ b/d/demography-jewish/index.html
@@ -20,25 +20,25 @@
 			<audio controls src="/_assets/audio/DemographyJewish.mp3">
 			</audio>
 			<p>
-				Six million Jews died in the Holocaust. This is a common assertion by the orthodoxy. However, the claim that six million Jews were threatened to perish, were in the process of perishing or had perished, is much older than World War Two. It appeared for the first time in the late 1880s &mdash; with respect to the Jews living in Russia. Hence, the six-million figure had been a feature of Jewish propaganda decades before Hitler came to power. (See the entry on <a href="/s/six-million/index.html">Six Million</a> for details.)
+				Six million Jews died in the Holocaust. This is a common assertion by the orthodoxy. However, the claim that six million Jews were threatened to perish, were in the process of perishing, or had perished, is much older than World War Two. It appeared for the first time in the late 1880s &mdash; with respect to the Jews living in Russia. Hence, the six-million figure had been a feature of Jewish propaganda decades before Hitler came to power. (See the entry on <a href="/s/six-million/index.html">Six Million</a> for details.)
 			</p>
 			<p>
 				Claims about six million Jewish victims of National-Socialist persecution were made already toward the end of the Second World War. However, utter chaos prevailed in Europe since 1944. The political borders of many European nations in central and eastern Europe shifted dramatically. Ethnic cleansings of German and pro-German populations, as well as massive migration movements of ethnic and religious minorities, changed Europe&rsquo;s ethnic map as well.
 			</p>
 			<p>
-				For these reasons, it would have taken several years for these events to settle down, and for government authorities to get reestablished and organized. Only then would it have been possible to conduct any meaningful population statistics of any ethnic or religious group. Thus, anyone who claimed already in 1944, 1945 or 1946 to have secure knowledge in that matter cannot be trusted.
+				For these reasons, it would have taken several years for these events to settle down, and for government authorities to get reestablished and organized. Only then would it have been possible to conduct any meaningful population statistics of any ethnic or religious group. Thus, anyone who claimed already in 1944, 1945, or 1946 to have secure knowledge in that matter cannot be trusted.
 			</p>
 			<p>
 				Furthermore, Jewish population statistics are more complex than those of other groups, precisely because this group is not largely confined to a certain geographic area as most other groups. Jews have always had the tendency of migrating faster and more easily around the globe than other groups. In addition, such migrations are not necessarily trackable, as being Jewish is very much a question of definition &mdash; and a very fluid one at that. Who counts as a Jew? Is it an ethnicity or a religious group? The answers often depend on who is asked those questions in which context, and when.
 			</p>
-			<h4>
-				<a id="Demographic"></a>Demographic Studies
+			<h4 id="Demographic">
+				Demographic Studies
 			</h4>
 			<p>
 				The first encompassing demographic study on worldwide Jewish population developments before, during and after World War II was published in 1983 by Holocaust-skeptic demographer Walter N. Sanning (updated <a href="/bibliography/index.html#Sanning">Sanning 2023</a>). An orthodox study by several mainstream scholars was published in 1991, with <a href="/bibliography/index.html#Benz">Wolfgang Benz</a> as lead editor. (German only. No translation was ever published.) Each contributing author covered a certain country that was at least partially controlled by National-Socialist Germany.
 			</p>
 			<p>
-				A thorough analysis of both studies reveals the characteristics and main differences as laid out in the table. Enjoying government support, Benz&rsquo;s collection of essays by mainstream authors can boast excellent statistical source material, while Sanning used at times questionable sources. Whereas Sanning tried to take into consideration the massive Jewish exodus from Europe prior, during and right after the war, Benz&rsquo;s book arrives at its death toll basically by subtracting the earliest available postwar census data from the latest prewar census data. Hence, Benz overlooks a large chunk of the more than two million Jews who were not murdered in that time period, but who managed to emigrate to countries never under any German influence, such as Palestine/Israel, USA, Canada, Australia, England, South Africa and many Latin American nations.
+				A thorough analysis of both studies reveals the characteristics and main differences as laid out in the table. Enjoying government support, Benz&rsquo;s collection of essays by mainstream authors can boast excellent statistical source material, while Sanning used at times questionable sources. Whereas Sanning tried to take into consideration the massive Jewish exodus from Europe prior, during and right after the war, Benz&rsquo;s book arrives at its death toll basically by subtracting the earliest available postwar census data from the latest prewar census data. Hence, Benz overlooks a large chunk of the more than two million Jews who were not murdered in that time period, but who managed to emigrate to countries never under any German influence, such as Palestine/Israel, USA, Canada, Australia, England, South Africa, and many Latin American nations.
 			</p>
 			<p>
 				In addition to emigration, there can be many other reasons for the Jewish population of a country to shrink in size that have nothing to do with Holocaust murders, such as:
@@ -60,17 +60,9 @@
 				<caption>Comparison of Methods Used by Sanning and Benz</caption>
 				<thead>
 					<tr>
-						<th></th>
-						<th>
-						<p>
-							Sanning 1983
-						</p>
-						</th>
-						<th>
-						<p>
-							Benz 1991
-						</p>
-						</th>
+						<th> &nbsp; </th>
+						<th> Sanning 1983 </th>
+						<th> Benz 1991 </th>
 					</tr>
 				</thead>
 				<tbody>
@@ -112,21 +104,9 @@
 			<table class="table">
 				<thead>
 					<tr>
-						<th>
-						<p>
-							Country
-						</p>
-						</th>
-						<th>
-						<p>
-							Victims (Benz)
-						</p>
-						</th>
-						<th>
-						<p>
-							Missing (Sanning)
-						</p>
-						</th>
+						<th> Country </th>
+						<th> Victims (Benz) </th>
+						<th> Missing (Sanning) </th>
 					</tr>
 				</thead>
 				<tbody>
@@ -155,7 +135,7 @@
 				</tbody>
 			</table>
 			<p>
-				Jewish losses on the territory of the Soviet Union primarily would be the result of the so-called <a href="/e/einsatzgruppen/index.html"><i>Einsatzgruppen</i></a>. Their reports indicate that up to a three-quarter million Jews may have been executed by these units, although this presumably includes Jews deported east from central and western European countries, so not all of these 750,000 victims were Soviet Jews. Furthermore, the numerical reliability of the <a href="/e/einsatzgruppen/index.html"><i>Einsatzgruppen</i></a>.reports is highly questionable &mdash; potentially in both directions. (See the entry on the <a href="/e/einsatzgruppen/index.html"><i>Einsatzgruppen</i></a>. for more details.)
+				Jewish losses on the territory of the Soviet Union primarily would be the result of the so-called <a href="/e/einsatzgruppen/index.html"><i>Einsatzgruppen</i></a>. Their reports indicate that up to a three-quarter million Jews may have been executed by these units, although this presumably includes Jews deported east from central and western European countries, so not all of these 750,000 victims were Soviet Jews. Furthermore, the numerical reliability of the <a href="/e/einsatzgruppen/index.html"><i>Einsatzgruppen</i></a> reports is highly questionable &mdash; potentially in both directions. (See the entry on the <a href="/e/einsatzgruppen/index.html"><i>Einsatzgruppen</i></a> for more details.)
 			</p>
 			<p>
 				Sanning evidently disregards these executions entirely, which is highly questionable. On the other hand, Benz and colleagues inflate that figure by expressly including in it all casualties among soldiers, partisans, and from Soviet mass deportations and incarcerations.
@@ -170,21 +150,9 @@
 				<caption>Corrections Needed for Benz</caption>
 				<tbody>
 					<tr>
-						<th>
-						<p>
-							Benz&rsquo;s Figure
-						</p>
-						</th>
-						<th>
-						<p>
-							Minus
-						</p>
-						</th>
-						<th>
-						<p>
-							Reason
-						</p>
-						</th>
+						<th> Benz&rsquo;s Figure </th>
+						<th> Minus </th>
+						<th> Reason </th>
 					</tr>
 				</tbody>
 				<tbody>
@@ -237,16 +205,8 @@
 				<tbody>
 					<tr>
 						<th>Europe</th>
-						<th>
-						<p>
-							Prewar
-						</p>
-						</th>
-						<th>
-						<p>
-							Postwar
-						</p>
-						</th>
+						<th> Prewar </th>
+						<th> Postwar </th>
 					</tr>
 					<tr>
 						<td><a href="/b/belgium/index.html">Belgium</a></td>
@@ -317,11 +277,7 @@
 				<thead>
 					<tr>
 						<th>Country</th>
-						<th>
-						<p>
-							Deportees
-						</p>
-						</th>
+						<th> Deportees </th>
 					</tr>
 				</thead>
 				<tbody>
